--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 # Datasource properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/<dbname>
-spring.datasource.username=<username>
-spring.datasource.password=<password>
+spring.datasource.username=<connection username>
+spring.datasource.password=<connection password>
+
 # Connection pool properties
 #
 #connection.pool.initialPoolSize=5
@@ -11,7 +12,9 @@ spring.datasource.password=<password>
 #connection.pool.maxPoolSize=20
 #connection.pool.maxIdleTime=3000
 server.port=5000
+
 # stripe key
-STRIPE_PUBLIC_KEY=<pk_test_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa>
-STRIPE_SECRET_KEY=<sk_test_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa>
+STRIPE_PUBLIC_KEY=<stripe public key>
+STRIPE_SECRET_KEY=<stripe secret key>
+
 management.endpoints.web.exposure.include=*
